--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,8 @@
 --- 02 COLORS
 
  - Primary: #e67e22
-
- - Tints:
- - Shades:
+ - Tints: #fdf2e9
+ - Shades: #cf711f
  - Accents:
  - Greys: 
  #555
@@ -47,10 +46,15 @@ html {
 }
 
 body {
-   font-family: sans-serif;
+   font-family: 'Rubik', sans-serif;
    line-height: 1;
    font-weight: 400;
    color: #555;
+}
+
+.section-hero {
+   background-color: #fdf2e9;
+   padding: 9.6rem 0;
 }
 
 .hero {
@@ -58,7 +62,8 @@ body {
    margin: 0 auto;
    display: grid;
    grid-template-columns: 1fr 1fr;
-   align-items: center;
+   gap: 9.6rem;
+   align-items: center;   
 }
 
 .heading-primary {
@@ -76,6 +81,81 @@ body {
    margin-bottom: 4.8rem;
 }
 
+.btn:link,
+.btn:visited {
+   text-decoration: none;
+   font-size: 2rem;
+   font-weight: 600;
+   padding: 1.6rem 3.2rem;
+   display: inline-block;
+
+   /* Put transition on original class selector */
+   transition: all 300ms;
+}
+
+.btn--full:link,
+.btn--full:visited {
+   background-color: #e67e22;
+   color: #fff;
+}
+
+.btn--full:hover,
+.btn--full:active {
+   background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+   background-color: #fff;
+   color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+   background-color: #fdf2e9;
+   /* border: 3px solid #fff; */
+
+   /* Trick to add border inside */
+   box-shadow: inset 0 0 0 3px #fff;
+}
+
 .hero-img {
    width: 100%;
+}
+
+.margin-right-sm {
+   margin-right: 1.6rem !important;
+}
+
+.delivered-meals {
+   display: flex;
+   align-items: center;
+   gap: 1.6rem;
+   margin-top: 8rem;
+}
+
+.delivered-imgs {
+   display: flex;
+}
+
+.delivered-imgs img {
+   height: 4.8rem;
+   width: 4.8rem;
+   border-radius: 50%;
+   margin-right: -1.6rem;
+   border: 3px solid #fdf2e9
+}
+
+.delivered-imgs img:last-child {
+   margin-right: 0;
+}
+
+.delivered-text {
+   font-size: 1.8rem;
+   font-weight: 600;
+}
+
+.delivered-text span {
+   color: #cf711f;
+   font-weight: 700;
 }
