--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,14 @@
 
  - Font Weights:
       Default: 400
+      Medium: 500
+      Semi-bold: 600
+      Bold: 700
 
  - Line heights:
       Default: 1
+      Small: 1.05
+      Paragraph default: 1.6
 
 --- 02 COLORS
 
@@ -24,6 +29,7 @@
 --- 05 SHADOWS
 
 --- 06 BORDER-RADIUS
+      Default: 9px
 
 --- 07 WHITESPACE
 
@@ -71,6 +77,7 @@ body {
    font-size: 2rem;
    font-weight: 600;
    padding: 1.6rem 3.2rem;
+   border-radius: 9px;
    display: inline-block;
 
    /* Put transition on original class selector */
@@ -122,6 +129,44 @@ body {
    height: 2.2rem;
 }
 
+/* ************************ */
+/* NAVIGATION */
+/* ************************ */
+
+.main-nav-list {
+   list-style: none;
+   display: flex;
+   align-items: center;
+   gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+   display: inline-block;
+   text-decoration: none;
+   color: #333;
+   font-weight: 500;
+   font-size: 1.8rem;
+   transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+   color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+   padding: 1.2rem 2.4rem;
+   border-radius: 9px;
+   color: #fff;
+   background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+   background-color: #cf711f;
+}
 /* ************************ */
 /* HERO SECTION */
 /* ************************ */
