--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,30 @@ body {
 /* GENERAL REUSABLE COMPONENT */
 /* ************************ */
 
+.container {
+   /* 1140px */
+   max-width: 120rem;
+   margin: 0 auto;
+   padding: 0 3.2rem;
+}
+
+.grid {
+   display: grid;
+   gap: 9.6rem;
+}
+
+.grid--2-cols {
+   grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+   grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+   grid-template-columns: repeat(3, 1fr);
+}
+
 .heading-primary {
    font-size: 5.2rem;
    font-weight: 700;
@@ -170,6 +194,7 @@ body {
 /* ************************ */
 /* HERO SECTION */
 /* ************************ */
+
 .section-hero {
    background-color: #fdf2e9;
    padding: 4.8rem 0 9.6rem 0;
@@ -231,3 +256,17 @@ body {
    color: #cf711f;
    font-weight: 700;
 }
+
+/* ************************ */
+/* HOW IT WORKS SECTION */
+/* ************************ */
+
+.section-how {
+   padding: 9.6rem 0;
+   background-color: orangered;
+}
+
+
+
+
+
