--- a/css/general.css
+++ b/css/general.css
@@ -34,6 +34,7 @@
 
 --- 06 BORDER-RADIUS
       Default: 9px
+      Medium: 11px
 
 --- 07 WHITESPACE
 
@@ -169,4 +170,38 @@ body {
 
    /* Trick to add border inside */
    box-shadow: inset 0 0 0 3px #fff;
+}
+
+.link:link,
+.link:visited {
+   display: inline-block;
+   color: #e67e22;
+   text-decoration: none;
+   border-bottom: 1px solid currentColor;
+   padding-bottom: 2px;
+   transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+   color: #cf711f;
+   border-bottom: 1px solid transparent;
+}
+
+/* HELPER/SETTINGS CLASSES */
+
+.margin-right-sm {
+   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+   margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+   text-align: center;
+}
+
+strong {
+   font-weight: 500;
 }
