--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@
 .main-nav-link.nav-cta:active {
    background-color: #cf711f;
 }
+
 /* ************************ */
 /* HERO SECTION */
 /* ************************ */
@@ -82,10 +83,6 @@
 
 .hero-img {
    width: 100%;
-}
-
-.margin-right-sm {
-   margin-right: 1.6rem !important;
 }
 
 .delivered-meals {
@@ -119,6 +116,35 @@
 .delivered-text span {
    color: #cf711f;
    font-weight: 700;
+}
+
+/* ************************ */
+/* FEATURED IN SECTION */
+/* ************************ */
+
+.section-featured {
+   padding: 4.8rem 0;
+}
+
+.heading-featured-in {
+   font-size: 1.4rem;
+   text-transform: uppercase;
+   letter-spacing: 0.75px;
+   font-weight: 500;
+   text-align: center;
+   margin-bottom: 2.4rem;
+   color: #888;
+}
+
+.logos {
+   display: flex;
+   justify-content: space-around;
+}
+
+.logos img {
+   height: 3.2rem;
+   filter: brightness(0);
+   opacity: 50%;
 }
 
 /* ************************ */
@@ -181,7 +207,111 @@
    width: 35%;
 }
 
+/* ************************ */
+/* MEALS SECTION */
+/* ************************ */
 
+.section-meals {
+   padding: 9.6rem 0;
+}
 
+.meal {
+   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+   border-radius: 11px;
+   overflow: hidden;
+   transition: all 0.4s;
+}
 
+.meal:hover {
+   transform: translateY(-1.5rem);
+   box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.065);
+}
+
+.meal-content {
+   padding: 4.8rem;
+   padding-top: 3.2rem;
+}
+
+.meal-tags {
+   margin-bottom: 1.2rem;
+   display: flex;
+   gap: 0.4rem;
+}
+
+.tag {
+   display: inline-block;
+   padding: 0.4rem 0.8rem;
+   font-size: 1.2rem;
+   font-weight: 600;
+   text-transform: uppercase;
+   color: #333;
+   border-radius: 100px;
+}
+
+.tag--vegetarian {
+   background-color: #51cf66;
+}
+
+.tag--vegan {
+   background-color: #94d82d;
+}
+
+.tag--paleo {
+   background-color: #ffd43b;
+}
+
+.meal-tittle {
+   font-size: 2rem;
+   color: #333;
+   font-weight: 600;
+   margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+   list-style: none;
+   display: flex;
+   flex-direction: column;
+   gap: 2rem;
+}
+
+.meal-attribute {
+   font-size: 1.8rem;
+   display: flex;
+   align-items: center;
+   gap: 1.6rem;
+}
+
+.meal-icon {
+   height: 2.4rem;
+   width: 2.4rem;
+   color: #e67e22;
+}
+
+.meal-img {
+   width: 100%;
+}
+
+.all-recipes {
+   text-align: center;
+   font-size: 1.8rem;
+}
+
+.list {
+   list-style: none;
+   display: flex;
+   flex-direction: column;
+   gap: 1.6rem;
+}
+
+.list-item {
+   font-size: 1.8rem;
+   display: flex;
+   align-items: center;
+}
+
+.list-icon {
+   width: 3rem;
+   height: 3rem;
+   color: #e67e22;
+}
 
