Building the Pricing Section
New CSS used:

.grid:not(:last-child) {
   margin-bottom: 9.6rem;
}

In order to have multiple grids inside the same section with a margin between them but not on the last grid as well

--- a/css/general.css
+++ b/css/general.css
@@ -28,7 +28,7 @@
  - Tints: #fdf2e9 #fae5d3
  - Shades: #cf711f
  - Accents:
- - Greys:  #555 #333
+ - Greys:  #555 #333 { #6f6f6f (lightest grey allowed on #fdf2e9) }
 
 --- 05 SHADOWS
 
@@ -43,10 +43,14 @@
 
  */
 
+*, *::before, *::after {
+	box-sizing: border-box;
+}
+
 * {
    padding: 0;
    margin: 0;
-   box-sizing: border-box;
+   font: inherit;
 }
 
 html {
@@ -54,6 +58,7 @@ html {
    font-size: 62.5%;
    /* 10px / 16px = 0.625 = 62.5% */
    /* Percentage of user's browser font-size setting */
+   color-scheme: dark light;
 }
 
 body {
@@ -61,6 +66,16 @@ body {
    line-height: 1;
    font-weight: 400;
    color: #555;
+   min-height: 100vh;
+}
+
+img, picture, svg, video {
+	display: block;
+	max-width: 100%;
+}
+
+input, textarea, button, select {
+	font: inherit;
 }
 
 /* ************************ */
@@ -78,6 +93,10 @@ body {
    display: grid;
    row-gap: 9.6rem;
    column-gap: 6.4rem;
+}
+
+.grid:not(:last-child) {
+   margin-bottom: 9.6rem;  
 }
 
 .grid--2-cols {
@@ -186,6 +205,25 @@ body {
 .link:active {
    color: #cf711f;
    border-bottom: 1px solid transparent;
+}
+
+.list {
+   list-style: none;
+   display: flex;
+   flex-direction: column;
+   gap: 1.6rem;
+}
+
+.list-item {
+   font-size: 1.8rem;
+   display: flex;
+   align-items: center;
+}
+
+.list-icon {
+   width: 3rem;
+   height: 3rem;
+   color: #e67e22;
 }
 
 /* HELPER/SETTINGS CLASSES */
