--- a/css/general.css
+++ b/css/general.css
@@ -24,13 +24,24 @@
 
 --- 02 COLORS
 
- - Primary: #e67e22
- - Tints: #fdf2e9 #fae5d3
- - Shades: #cf711f
+ - Primary: 
+            #e67e22
+ - Tints: 
+            #fdf2e9 
+            #fae5d3 
+            #e98b38
+ - Shades: 
+            #cf711f
+            #45260a
  - Accents:
- - Greys:  #555 #333 { #6f6f6f (lightest grey allowed on #fdf2e9) }
+ - Greys:  
+            #555 
+            #333 
+            #6f6f6f (lightest grey allowed on #fdf2e9) 
 
 --- 05 SHADOWS
+
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 --- 06 BORDER-RADIUS
       Default: 9px
@@ -152,6 +163,7 @@ input, textarea, button, select {
    letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
    text-decoration: none;
@@ -161,6 +173,9 @@ input, textarea, button, select {
    border-radius: 9px;
    display: inline-block;
 
+   /* Only necessary for .btn */
+   border: none;
+   cursor: pointer;
    /* Put transition on original class selector */
    transition: all 300ms;
 }
@@ -189,6 +204,18 @@ input, textarea, button, select {
 
    /* Trick to add border inside */
    box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+   background-color: #45260a;
+   color: #fdf2e9;
+   align-self: end;
+   padding: 1.4rem;
+}
+
+.btn--form:hover {
+   background-color: #fdf2e9;
+   color: #45260a;
 }
 
 .link:link,
@@ -224,6 +251,13 @@ input, textarea, button, select {
    width: 3rem;
    height: 3rem;
    color: #e67e22;
+}
+
+*:focus {
+   outline: none;
+   /* outline: 4px dotted #e67e22; */
+   /* outline-offset: 8px; */
+   box-shadow: 0 0 0 0.3rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER/SETTINGS CLASSES */
